Move all inventory builders into owning classes