@@ -1,7 +1,6 @@
 package gg.projecteden.nexus.features.trust.providers;
 
 import gg.projecteden.nexus.Nexus;
-import gg.projecteden.nexus.features.menus.MenuUtils;
 import gg.projecteden.nexus.features.menus.api.ClickableItem;
 import gg.projecteden.nexus.features.menus.api.SmartInventory;
 import gg.projecteden.nexus.features.menus.api.content.InventoryContents;
@@ -15,6 +14,8 @@ import gg.projecteden.nexus.models.trust.Trust.Type;
 import gg.projecteden.nexus.models.trust.TrustService;
 import gg.projecteden.nexus.utils.ItemBuilder;
 import gg.projecteden.nexus.utils.PlayerUtils;
+import lombok.NoArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import org.bukkit.Material;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.entity.Player;
@@ -23,97 +24,84 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
+import static gg.projecteden.nexus.features.menus.MenuUtils.getRows;
 import static gg.projecteden.nexus.features.menus.SignMenuFactory.ARROWS;
 
-public class TrustProvider extends MenuUtils implements InventoryProvider {
-	private final Trust trust;
-	private final Runnable back;
+@RequiredArgsConstructor
+public class TrustProvider extends InventoryProvider {
+	private final InventoryProvider back;
 	private final AtomicReference<Trust.Type> filterType = new AtomicReference<>();
 
-	public TrustProvider(Trust trust, Runnable back) {
-		this.trust = trust;
-		this.back = back;
+	public TrustProvider() {
+		back = null;
 	}
 
-	// TODO Comply with MenuUtils
-	public static void openMenu(Player player) {
-		openMenu(player, null);
-	}
-
-	public static void openMenu(Player player, Runnable back) {
-		openMenu(player, 0, back, null);
-	}
-
-	public static void openMenu(Player player, int page, Runnable back, InventoryProvider provider) {
+	@Override
+	public void open(Player player, int page) {
 		Trust trust = new TrustService().get(player);
-		int rows = (int) Math.min(6, Math.ceil(trust.getAll().size() / 9) + 3);
 		SmartInventory.builder()
-				.provider(provider == null ? new TrustProvider(trust, back) : provider)
-				.rows(rows)
-				.title("Trusts")
-				.build()
-				.open(player, page);
-	}
-
-	public void refresh() {
-		openMenu(trust.getOnlinePlayer(), 1, back, this);
+			.provider(this)
+			.title("Trusts")
+			.rows(getRows(trust.getAll().size(), 3))
+			.build()
+			.open(player, page);
 	}
 
 	@Override
 	public void init(Player player, InventoryContents contents) {
+		Trust trust = new TrustService().get(player);
 		if (back == null)
 			addCloseItem(contents);
 		else
-			addBackItem(contents, e -> back.run());
+			addBackItem(contents, e -> back.open(player));
 
 		List<ClickableItem> items = new ArrayList<>();
 
 		trust.getAll().stream()
-				.map(PlayerUtils::getPlayer)
-				.sorted(Comparator.comparing(Nickname::of))
-				.collect(Collectors.toList())
-				.forEach(_player -> {
-					if (filterType.get() != null)
-						if (!trust.trusts(filterType.get(), _player))
-							return;
+			.map(PlayerUtils::getPlayer)
+			.sorted(Comparator.comparing(Nickname::of))
+			.toList()
+			.forEach(trusted -> {
+				if (filterType.get() != null)
+					if (!trust.trusts(filterType.get(), trusted))
+						return;
 
-					ItemBuilder builder = new ItemBuilder(Material.PLAYER_HEAD)
-						.skullOwner(_player)
-						.name("&e" + Nickname.of(_player));
-					for (Trust.Type type : Trust.Type.values()) {
-						// TODO Decorations
-						if (type.equals(Type.DECORATIONS) && !Rank.of(player).isStaff())
-							continue;
-						//
+				ItemBuilder builder = new ItemBuilder(Material.PLAYER_HEAD)
+					.skullOwner(trusted)
+					.name("&e" + Nickname.of(trusted));
+				for (Trust.Type type : Trust.Type.values()) {
+					// TODO Decorations
+					if (type.equals(Type.DECORATIONS) && !Rank.of(player).isStaff())
+						continue;
+					//
 
-						if (trust.trusts(type, _player))
-							builder.lore("&a" + type.camelCase());
-						else
-							builder.lore("&c" + type.camelCase());
-					}
+					if (trust.trusts(type, trusted))
+						builder.lore("&a" + type.camelCase());
+					else
+						builder.lore("&c" + type.camelCase());
+				}
 
-					builder.lore("").lore("&fClick to edit");
+				builder.lore("").lore("&fClick to edit");
 
-					items.add(ClickableItem.of(builder.build(), e ->
-						TrustPlayerProvider.open(player, _player)));
-				});
+				items.add(ClickableItem.of(builder.build(), e ->
+					new TrustPlayerProvider(trusted).open(player)));
+			});
 
-		paginator(player, contents, items);
+		paginator(player, contents, items).build();
 
 		ItemBuilder add = new ItemBuilder(Material.LIME_CONCRETE_POWDER).name("&aAdd Trust");
 		contents.set(0, 8, ClickableItem.of(add.build(), e ->
-				Nexus.getSignMenuFactory().lines("", ARROWS, "Enter a", "player's name")
-						.prefix(Features.get(TrustFeature.class).getPrefix())
-						.response(lines -> {
-							if (lines[0].length() > 0) {
-								OfflinePlayer trusted = PlayerUtils.getPlayer(lines[0]);
-								TrustPlayerProvider.open(player, trusted);
-							} else
-								openMenu(player);
-						})
-						.open(player)));
+			Nexus.getSignMenuFactory().lines("", ARROWS, "Enter a", "player's name")
+				.prefix(Features.get(TrustFeature.class).getPrefix())
+				.response(lines -> {
+					if (lines[0].length() > 0) {
+						OfflinePlayer trusted = PlayerUtils.getPlayer(lines[0]);
+						new TrustPlayerProvider(trusted).open(player);
+					} else
+						open(player, contents.pagination());
+				})
+				.open(player)));
 
 		Trust.Type previous = filterType.get() == null ? Type.values()[0].previousWithLoop() : filterType.get().previous();
 		Trust.Type current = filterType.get();
@@ -122,14 +110,14 @@ public class TrustProvider extends MenuUtils implements InventoryProvider {
 		if (current == next) next = null;
 
 		ItemBuilder item = new ItemBuilder(Material.HOPPER).name("&6Filter by:")
-				.lore("&7⬇ " + (previous == null ? "All" : previous.camelCase()))
-				.lore("&e⬇ " + (current == null ? "All" : current.camelCase()))
-				.lore("&7⬇ " + (next == null ? "All" : next.camelCase()));
+			.lore("&7⬇ " + (previous == null ? "All" : previous.camelCase()))
+			.lore("&e⬇ " + (current == null ? "All" : current.camelCase()))
+			.lore("&7⬇ " + (next == null ? "All" : next.camelCase()));
 
 		Trust.Type finalNext = next;
 		contents.set(contents.inventory().getRows() - 1, 4, ClickableItem.of(item.build(), e -> {
 			filterType.set(finalNext);
-			refresh();
+			open(player, contents.pagination());
 		}));
 	}
 
